# inekf

./: .drone.yml  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md
docs/: Doxyfile  conf.py  index.rst  requirements.txt
docs/_static/: tab_spacing.css  theme_override.css
docs/cpp/: core.rst  groups.rst  inertial.rst  se2models.rst
docs/python/: core.rst  groups.rst  inertial.rst  se2models.rst
docs/usage/: changelog.rst  extend.rst  install.rst  start.rst
examples/: CMakeLists.txt  SimpleSE2.cpp  UnderwaterInertial.cpp  VictoriaPark.cpp
exe/: CMakeLists.txt
exe/run/: CMakeLists.txt  run.cpp
include/Core/: GenericMeasureModel.h  InEKF.h  InEKF.tpp  LieGroup.h  MeasureModel.h  ProcessModel.h  SE2.h  SE2.tpp  SE3.h  SE3.tpp  SO2.h  SO2.tpp  SO3.h  SO3.tpp  State.h  base_measure.h  base_process.h  iekf.h  state.h
include/InEKF/: Core  Core.h  Plot  SE2_SLAM  Se2_3_Bias.h  Utils
include/Inertial/: DVLSensor.h  DepthSensor.h  InertialProcess.h
include/SE2Models/: GPSSensor.h  LandmarkSensor.h  OdometryProcess.h  OdometryProcessDynamic.h
include/SE2_3_Bias/: DVLSensor.h  DepthSensor.h  InertialProcess.h  SE2_3_Bias.h  core.h  depth.h  dvl.h  inertial.h
include/SE2_SLAM/: OdometryProcess.h
include/Utils/: matplotlibcpp.h
include/iekf/: base_lie.h  base_measure.h  base_process.h  core.h  iekf.h  state.h  system.h
include/lie/: SE2_3.h  SE2_3_Bias.h  base.h
include/model_measure/: base.h
include/model_process/: base.h
include/models/: base_measure.h  base_process.h  dvl.h  inertial.h
python/: CMakeLists.txt  Dockerfile  build-wheels.sh  setup.py.in
python/examples/: UnderwaterInertial.py  UnderwaterInertial_fromScratch.py  VictoriaPark.py  tree_extraction.py
python/include/: LieGroup.h  MeasureModel.h  ProcessModel.h  forLoop.h  globals.h  makeInEKF.h  makeLie.h  makeMeasure.h  makeProcess.h
python/inekf/: __init__.py  base.py  lie_groups.py  measure_model.py
python/src/: LieGroup.cpp  SE.cpp  SO.cpp  main.cpp  makeInEKF.cpp  makeInertial.cpp  makeMeasure.cpp  makeMeasureSE.cpp  makeMeasureSO.cpp  makeProcess.cpp  makeSE.cpp  makeSE2Models.cpp  makeSE2_SLAM.cpp  makeSO.cpp
python/tests/Core/: test_Measure.py  test_SE2.py  test_SE3.py  test_SO2.py  test_SO3.py
python/tests/Inertial/: test_InertialProcess.py
python/tests/SE2_SLAM/: test_Odometry.py
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  InEKF.cpp  State.cpp  iekf.cpp  state.cpp
src/Inertial/: DVLSensor.cpp  DepthSensor.cpp  InertialProcess.cpp  SE2_3_Bias.cpp
src/SE2Models/: GPSSensor.cpp  LandmarkSensor.cpp  OdometryProcess.cpp  OdometryProcessDynamic.cpp
src/SE2_3_Bias/: CMakeLists.txt  DVLSensor.cpp  DepthSensor.cpp  InertialProcess.cpp  SE2_3_Bias.cpp  depth.cpp  dvl.cpp  inertial.cpp
src/SE2_SLAM/: CMakeLists.txt  OdometryProcess.cpp
src/iekf/: CMakeLists.txt  iekf.cpp  state.cpp
src/lie/: CMakeLists.txt  SE2_3.cpp  SE2_3_Bias.cpp  state.cpp
src/models/: CMakeLists.txt  dvl.cpp  inertial.cpp
tests/: CMakeLists.txt  Dockerfile
tests/Core/: CMakeLists.txt  test_GenericMeasure.cpp  test_Measure.cpp  test_SE2.cpp  test_SE3.cpp  test_SO2.cpp  test_SO3.cpp
tests/Inertial/: test_DVLSensor.cpp  test_DepthSensor.cpp  test_InertialProcess.cpp
tests/SE2Models/: test_Odometry.cpp
tests/SE2_SLAM/: CMakeLists.txt  test_Odometry.cpp
